# ICP-Practice

./: CMakeLists.txt  README.md  main.cpp
data/: demo_icp.pcd  demo_plicp.pcd  input.pcd  target.pcd
include/: ICP.h  PLICP.h
src/: ICP.cpp  PLICP.cpp
